# c0-compiler

./: README.md  c0.cabal
Desktop/compiler/aula-lab-1-hs-ruipmc/src/: Interpreter.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: example1.c0  example2.c0  example3.c0  example4.c0  example5.c0
src/: AST.hs  CodeGen.hs  IR.hs  Lexer.x  Main.hs  Parser.y
