cabal-version:      2.4
name:               code-gen
version:            0.1.0.0
synopsis:           Compilador básico para c0
author:             Rui Coelho & Sérgio Coelho
maintainer:         up202106772 & up202107951

executable code-gen
    main-is:        Main.hs
    other-modules:  AST, IR, CodeGen
    build-depends:    base ^>=4.17.2.0, containers, mtl
    hs-source-dirs:   src
    default-language: Haskell2010
    
-- name: c0
-- version: 0.1.0.0
-- synopsis: Trabalho de Compiladores (CC3001)
-- description: Compilador básico para c0
-- author: Rui Coelho & Sérgio Coelho
-- maintainer: up202106772 & up202107951
-- category: Language
-- build-type: Simple
-- cabal-version: >=1.10

-- executable c0
--     main-is: Main.hs
--     other-modules: Lexer, Parser, AST
--     build-tools: alex, happy
--     build-depends: base, array 
--     hs-source-dirs: src
--     default-language: Haskell2010   


